<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#2B547E">

    <TextView
        android:id="@+id/labelRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="Sign up for an account"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textStyle="bold|italic"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelRegister"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawablePadding="5dp"
        android:background="@drawable/rounded_borders"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="@dimen/padding_edit_text_7dp"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_below="@id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:drawablePadding="5dp"
        android:padding="@dimen/padding_edit_text_7dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        android:background="@drawable/rounded_borders"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/editTextRetypePassword"
        android:layout_below="@id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="Confirm password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:drawablePadding="5dp"
        android:background="@drawable/rounded_borders"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="@dimen/padding_edit_text_7dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        />

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_below="@id/editTextRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerVertical="true"
        android:hint="@string/fullName"
        android:inputType="text"
        android:maxLength="50"
        android:drawablePadding="5dp"
        android:background="@drawable/rounded_borders"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="@dimen/padding_edit_text_7dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        android:layout_below="@+id/editTextFullName"
        android:orientation="horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_borders"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="@dimen/text_size_edit_profile"
            android:drawablePadding="5dp"
            android:textColor="@color/gray"/>

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_edit_profile"
            android:buttonTint="@color/white"
            android:layout_marginStart="15dp"
            android:checked="true"
            android:layout_marginLeft="15dp" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:textSize="@dimen/text_size_edit_profile"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_below="@id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerVertical="true"
        android:hint="@string/address"
        android:inputType="text"
        android:maxLength="30"
        android:drawablePadding="5dp"
        android:padding="@dimen/padding_edit_text_7dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        android:background="@drawable/rounded_borders"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_below="@id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerVertical="true"
        android:hint="@string/phoneNumber"
        android:inputType="phone"
        android:maxLength="11"
        android:drawablePadding="5dp"
        android:background="@drawable/rounded_borders"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="@dimen/padding_edit_text_7dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        />

    <EditText
        android:id="@+id/editTextDateOfBirth"
        android:layout_below="@id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerVertical="true"
        android:hint="@string/dateOfBirth"
        android:inputType="date"
        android:maxLength="10"
        android:drawablePadding="5dp"
        android:background="@drawable/rounded_borders"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="@dimen/padding_edit_text_7dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/editTextDateOfBirth"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_register_10dp">
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_weight="3"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_borders"
            android:textColorHint="@color/white"
            app:backgroundTint="#02E433"
         />

        <Button
            android:id="@+id/buttonCancelRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:layout_weight="3"
            android:layout_marginEnd="30dp"
            app:backgroundTint="#02E433"
            android:background="@drawable/rounded_borders"
            android:layout_marginRight="30dp" />
    </LinearLayout>
</RelativeLayout>