<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#2B547E"
    android:id="@+id/mainContainer">

    <TextView
        android:textSize="20dp"
        android:layout_margin="50dp"
        android:textStyle="bold"
        android:text="Login Form"
        android:id="@+id/tvnatural"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_left_right_30dp"
        android:layout_marginRight="@dimen/padding_left_right_30dp"
        android:hint="@string/email"
        android:layout_below="@+id/tvnatural"
        android:layout_marginTop="60dp"
        android:inputType="textEmailAddress"
        android:drawablePadding="@dimen/drawable_padding"
        android:padding="10dp"
        android:background="@drawable/rounded_borders"
        android:textColorHint="@color/white"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_below="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_left_right_30dp"
        android:layout_marginRight="@dimen/padding_left_right_30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawablePadding="@dimen/drawable_padding"
        android:padding="10dp"
        android:layout_marginTop="@dimen/margin_top_10dp"
        android:background="@drawable/rounded_borders"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextPassword"
        android:background="@drawable/rounded_borders"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/padding_left_right_20dp"
        android:paddingRight="@dimen/padding_left_right_20dp"
        android:layout_marginTop="@dimen/margin_top_10dp"
        android:textAllCaps="false"
        app:backgroundTint="#02E433"/>

    <Button
        android:id="@+id/buttonSwitchRegister"
        android:layout_below="@id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginTop="5dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:backgroundTint="#02E433"
        android:background="@drawable/rounded_borders"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/buttonForgetPassword"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</RelativeLayout>